# pelican-obsidian

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  obsidian-callouts.css  pyproject.toml  ruff.toml  setup.cfg
pelican/plugins/obsidian/: obsidian.py
pelican/plugins/tests/: test_obsidian.py  test_obsidian_plugin.py
pelican/plugins/tests/fixtures/: breadcrumb_elements.md  breadcrumb_removal_test.md  callouts_test.md  case_insensitive_links.md  case_sensitive_draft.md  custom_extensions_test.md  custom_link_text.md  draft_status.md  empty_metadata.md  error_handling_test.md  hash_tags.md  image_extensions.md  inline_hashtags_test.md  multiple_mixed_content.md  nested_directory_test.md  title_extraction_test.md  whitespace_variations.md
pelican/plugins/tests/fixtures/assets/docs/: presentation.pptx
