[build-system]
requires = [
  "setuptools>=69",  # modern setuptools for PEP 621 support
  "wheel",
  "setuptools_scm[toml]>=8",
]
build-backend = "setuptools.build_meta"

# ---------------------------------
# PEP 621 project metadata
# ---------------------------------
[project]
name = "pelican-obsidian"
description = "Makes Pelican markdown files more compatible with Obsidian"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Jonathan Sundqvist", email = "jonathan@argpar.se" },
  { name = "Krystian Safjan", email = "ksafjan@gmail.com" },
]
keywords = ["pelican", "obsidian", "plugin"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = [
  "pelican",
  "pelican-yaml-metadata",
  "pyyaml",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jonathan-s/pelican-obsidian"
Documentation = "https://github.com/jonathan-s/pelican-obsidian"
Source = "https://github.com/jonathan-s/pelican-obsidian"
Tracker = "https://github.com/jonathan-s/pelican-obsidian/issues"
Funding = "https://github.com/sponsors/jonathan-s"

[project.entry-points."pelican.plugins"]
obsidian = "pelican.plugins.obsidian.obsidian"

# ---------------------------------
# Setuptools configuration
# ---------------------------------
[tool.setuptools]
zip-safe = true
include-package-data = true
platforms = ["any"]

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools.package-data]
"pelican.plugins.obsidian" = ["py.typed"]

# ---------------------------------
# Version management (setuptools_scm)
# ---------------------------------
[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

# ---------------------------------
# Tooling configuration
# ---------------------------------
[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target_version = ["py39"]
include = '\\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
